<resources>
    <string name="app_name">Basketball Coach</string>
    <string name="roster">Roster</string>
    <string name="schedule">Schedule</string>
    <string name="standings">Standings</string>
    <string name="rankings">Rankings</string>
    <string name="recruiting">Recruiting</string>
    <string name="strategy">Strategy</string>
    <string name="staff">Staff</string>
    <string name="practice">Practice</string>
    <string name="starting_lineup">Starting Lineup</string>
    <string name="bench">Bench</string>
    <string name="on_the_floor">On the floor</string>
    <string name="game_number">Game %d</string>
    <string name="non_conference_game">Non-conference Game</string>
    <string name="conference_game">Conference Game</string>
    <string name="in_progress">In progress</string>
    <string name="game_final">Final</string>
    <string name="play_game">Play game</string>
    <string name="sim_game">Simulate game</string>
    <string name="half_placeholder">Half: %d</string>
    <string name="fouls">Fouls: %d</string>
    <string name="timeouts">TO: %d</string>
    <string-array name="game_views">
        <item>Play by play</item>
        <item>Home Roster</item>
        <item>Away Roster</item>
        <item>Team Stats</item>
        <item>Strategy</item>
    </string-array>
    <string-array name="game_roster_views">
        <item>Roster</item>
        <item>Offensive stats</item>
        <item>Defensive stats</item>
    </string-array>
    <string name="name">Name</string>
    <string name="team">Team</string>
    <string name="pos">Pos</string>
    <string name="position">Position</string>
    <string name="minutes">Minutes</string>
    <string name="player_fouls">Fouls</string>
    <string name="condition">Cond</string>
    <string name="rating">Rating</string>
    <string name="year">Year</string>
    <string name="x_slash_y">%1$d/%2$d</string>
    <string name="two_fg">2FG</string>
    <string name="three_fg">3FG</string>
    <string name="ft_fg">FT</string>
    <string name="assists">Assists</string>
    <string name="ob">OB</string>
    <string name="db">DB</string>
    <string name="steals">Steals</string>
    <string name="to">TO</string>
    <string name="offense">Offense</string>
    <string name="pace">Pace</string>
    <string name="faster">Faster</string>
    <string name="slower">Slower</string>
    <string name="offense_favors_threes">Offense favors threes</string>
    <string name="defense_favors_threes">Defense favors threes</string>
    <string name="more_threes">More threes</string>
    <string name="fewer_threes">Fewer threes</string>
    <string name="defense">Defense</string>
    <string name="aggression">Aggression</string>
    <string name="more_aggressive">More aggressive</string>
    <string name="less_aggressive">Less aggressive</string>
    <string name="press_frequency">Press frequency</string>
    <string name="always_press">Always press</string>
    <string name="never_press">Never press</string>
    <string name="press_aggression">Press aggression</string>
    <string name="intentionally_foul">Intentionally foul</string>
    <string name="move_quickly">Move quickly</string>
    <string name="waste_time">Waste time</string>
    <string name="standings_dash">%1$d-%2$d</string>
    <string name="conf_w_l">Conf. W-L</string>
    <string name="w_l">W-L</string>
    <string name="score_dash">%1$s %2$d - %3$d %4$s</string>
    <string name="player_overview">Player Overview</string>
    <string-array name="player_stats">
        <item>Offensive Stats</item>
        <item>Defensive Stats</item>
        <item>Other Stats</item>
    </string-array>
    <string name="colon">%1$s: %2$s</string>
    <string name="game">Game</string>
    <string name="close_range_shot">Close range shot: %d</string>
    <string name="mid_range_shot">Mid range shot: %d</string>
    <string name="long_range_shot">Long range shot: %d</string>
    <string name="free_throw_shot">Free throw shot: %d</string>
    <string name="post_move">Post move: %d</string>
    <string name="ball_handling">Ball handling: %d</string>
    <string name="passing">Passing: %d</string>
    <string name="off_ball_movement">Off ball movement: %d</string>
    <string name="post_defense">Post defense: %d</string>
    <string name="perimeter_defense">Perimeter defense: %d</string>
    <string name="on_ball_defense">On ball defense: %d</string>
    <string name="off_ball_defense">Off ball defense: %d</string>
    <string name="stealing">Stealing: %d</string>
    <string name="rebounding">Rebounding: %d</string>
    <string name="stamina">Stamina: %d</string>
    <string name="aggressiveness">Aggressiveness: %d</string>
    <string name="interest_colon">Interest: %s</string>
    <string name="rating_colon">Rating: %d</string>
    <string name="rating_range">Rating: %1$d-%2$d</string>
    <string name="potential_color">Potential: %d</string>
    <string name="recruitment_level">Recruitment Level: %1$d</string>
    <string name="unknown">Unknown</string>
    <string name="returning_players_plus_commits">Returning Players (Commitments)</string>
    <string name="sort_rating">Sort by rating</string>
    <string name="filter_positions">Filter positions</string>
    <string name="filter_interaction">Filter interaction</string>
    <string name="scout_player">Scout Player</string>
    <string name="contact_player">Contact Player</string>
    <string name="offer_scholarship">Offer Scholarship</string>
    <string name="official_visit">Official Visit</string>
    <string name="committed">Committed</string>
    <string name="scouting_assignment">Scouting Assignment</string>
    <string name="min_rating">Min. Rating</string>
    <string name="max_rating">Max rating</string>
    <string name="min_potential">Min. Potential</string>
    <string name="max_potential">Max Potential</string>
    <string name="coaching_attributes">Coaching Attributes</string>
    <string name="recruiting_colon">Recruiting: %d</string>
    <string name="shooting_colon">Shooting: %d</string>
    <string name="positioning_colon">Positioning: %d</string>
    <string name="conditioning_colon">Conditioning: %d</string>
    <string name="two_hyphens">%1$s - %2$s - %3$s</string>
    <string name="min">Min</string>
    <string name="pts">Pts</string>
    <string name="ast">Ast</string>
    <string name="reb">Reb</string>
    <string name="stl">Stl</string>
    <string name="fouls_label">Fouls</string>
    <string name="vs_opp">vs. %s</string>
    <string name="at_opp">\@ %s</string>
    <string name="w_score">W %1$d - %2$d</string>
    <string name="l_score">L %1$d - %2$d</string>
    <string name="pg">PG</string>
    <string name="sg">SG</string>
    <string name="sf">SF</string>
    <string name="pf">PF</string>
    <string name="c">C</string>
    <string name="number_and_parens">%1$d (%2$d)</string>
    <string name="practice_focus">Practice focus:</string>
    <string name="practice_performance">Recent practice performance</string>
    <string name="no_known_recruits">Recruits that your assistants discover will appear here. You can fine tune their scouting assignments on the Staff screen.</string>
    <string name="coaches">Coaches</string>
    <string name="coach_overview">Coach Overview</string>
    <string name="recruit_overview">Recruit Overview</string>
    <string name="tournament">Tournament</string>
    <string name="sim_game_x_of_y">Simulating game %d of %d</string>
    <string name="saving_sim_results">Saving results</string>
    <string name="cancel">Cancel</string>
    <string name="updating_tournaments">Updating tournaments</string>
    <string name="starting_new_season">Starting new season</string>
    <string name="preview">Preview</string>
    <string name="two_strings">%1$s %2$s</string>
    <string name="give_team_talk">Address your team</string>
    <string name="neutral_talk">There nothing to address right now.</string>
    <string name="calm_talk">You\'re doing good! Keep it up!</string>
    <string name="aggressive_talk">You guys need to start playing much better!</string>
    <string name="offensive_talk">Let\'s focus on offense for the time being.</string>
    <string name="defensive_talk">We need to clamp down on defense if we want to win.</string>
    <string name="call_timeout">Call Timeout!</string>
    <string name="cancel_timeout">Cancel Timeout</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="adj_eff">Adj. Eff</string>
    <string name="adj_off">Adj. Off</string>
    <string name="adj_def">Adj. Def</string>
    <string name="sort_high_rating_first">Rating: High to Low</string>
    <string name="sort_low_rating_first">Rating: Low to High</string>
    <string name="sort_high_interest_first">Interest: High to Low</string>
    <string name="sort_low_interest_first">Interest: Low to High</string>
    <string name="sort_most_interaction_first">Interactions: Most to Least</string>
    <string name="sort_least_interaction_first">Interactions: Least to Most</string>
    <string name="recruit_to_see">More time recruiting is needed to gauge interest.</string>
    <string name="prestige_match">I really like how good %1$s has been over the years!</string>
    <string name="prestige_close">I\'d prefer to play somewhere that\'s had more success.</string>
    <string name="prestige_miss">%1$s just doesn\'t match my level of ambition.</string>
    <string name="location_match_near">I\'ve always wanted to go to a school near home!</string>
    <string name="location_close_near">While I\'d prefer something closer to home, %1$s isn\'t that far away.</string>
    <string name="location_miss_near">I\'d prefer to play somewhere closer to home.</string>
    <string name="location_match_far">I\'ve always wanted to go to a school somewhere far from home!</string>
    <string name="location_close_far">While I\'d prefer something further from home, %1$s isn\'t that close either.</string>
    <string name="location_miss_far">I\'d prefer to play somewhere further from home.</string>
    <string name="location_unimportant">Location just isn\'t that important to me</string>
    <string name="team_ability_develop_hit">I would love to play for a team as good as %1$s!</string>
    <string name="team_ability_develop_miss">%1$s just isn\'t a good enough team for my desires.</string>
    <string name="team_ability_develop_close">While I\'d prefer to play for a better team, I suppose %1$s would be good enough.</string>
    <string name="team_ability_develop_overshoot">While I want to develop my game, I think %1$s is just too good for me to ever have a chance to play.</string>
    <string name="team_ability_star_hit">I want to be a star player and I could totally be that at %1$s!</string>
    <string name="team_ability_star_miss">I would prefer to play somewhere that I can be their star.</string>
    <string name="team_ability_star_overshoot">While I want to be a star right away, I think %1$s just isn\'t good enough for me to achieve my goals.</string>
    <string name="team_ability_unimportant">The team\'s ability isn\'t an important factor for me.</string>
    <string name="play_style_hit">I love the way you play at %1$s!</string>
    <string name="play_style_middle">I don\'t have strong feelings about the way you play at %1$s.</string>
    <string name="play_style_miss">I hate the way you play at %1$s, so I can\'t see myself playing there.</string>
    <string name="playing_time_start_hit">I want to start right away and I can do that at %1$s!</string>
    <string name="playing_time_start_miss">I want to start right away and I don\'t see that happening at %1$s!</string>
    <string name="playing_time_develop_hit">I\'m okay with not starting immediately!</string>
    <string name="playing_time_develop_miss">I\'d prefer to have a chance to develop my skills without the pressure of starting right away.</string>
</resources>