<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/coach_name"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                tools:text="Coach Name"
                android:textAppearance="@style/HeaderTextBlack"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/coach_rating"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Rating: 75"
                android:textAppearance="@style/HeaderTextBlack"/>

            <TextView
                android:text="@string/coaching_attributes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/scouting_assignment"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/HeaderTextBlack"
                android:layout_marginBottom="8dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/coach_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:id="@+id/scouting_assignment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/assignment_header"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/HeaderTextBlack"
                    android:text="@string/scouting_assignment"/>

                <CheckBox
                    android:text="@string/pg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pg"
                    android:textAppearance="@style/NormalTextBlack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/sg"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/assignment_header"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    android:layout_marginStart="8dp"/>

                <CheckBox
                    android:text="@string/sg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sg"
                    android:textAppearance="@style/NormalTextBlack"
                    app:layout_constraintStart_toEndOf="@+id/pg"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/sf"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/assignment_header"/>

                <CheckBox
                    android:text="@string/sf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sf"
                    android:textAppearance="@style/NormalTextBlack"
                    app:layout_constraintStart_toEndOf="@+id/sg"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/pf"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/assignment_header"/>

                <CheckBox
                    android:text="@string/pf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pf"
                    android:textAppearance="@style/NormalTextBlack"
                    app:layout_constraintStart_toEndOf="@+id/sf"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/center"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/assignment_header"/>

                <CheckBox
                    android:text="@string/c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/center"
                    android:textAppearance="@style/NormalTextBlack"
                    app:layout_constraintStart_toEndOf="@+id/pf"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/assignment_header"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/min_rating"
                    android:textAppearance="@style/NormalTextBlack"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"/>

                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/max_rating"
                    android:textAppearance="@style/NormalTextBlack"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="@+id/textView11"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"/>

                <TextView
                    android:text="@string/min_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/pg"
                    android:textAppearance="@style/NormalTextBlack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/textView11"/>

                <TextView
                    android:text="@string/max_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:textAppearance="@style/NormalTextBlack"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/center"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:text="@string/min_potential"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:textAppearance="@style/NormalTextBlack"
                    app:layout_constraintEnd_toEndOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/min_rating"/>

                <TextView
                    android:text="@string/max_potential"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textAppearance="@style/NormalTextBlack"
                    app:layout_constraintEnd_toEndOf="@+id/max_rating"
                    app:layout_constraintStart_toStartOf="@+id/max_rating"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/max_rating"/>

                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/min_potential"
                    app:layout_constraintEnd_toEndOf="@+id/textView12"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    android:textAppearance="@style/NormalTextBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/max_potential"
                    app:layout_constraintEnd_toEndOf="@+id/textView13"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    android:textAppearance="@style/NormalTextBlack"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/list_item_player_attribute"/>

</RelativeLayout>